--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,12 @@
 
 body {
   margin: 0;
+  background: #f8f8f8;
+  color: #333;
+}
+
+p {
+  margin: 0;
 }
 
 .wrapper {
@@ -44,4 +50,60 @@ body {
 
 .news-wrapper {
   margin-top: 48px;
+}
+
+.news {
+  padding: 24px;
+  background: #fff;
+  border-radius: 4px;
+}
+
+.news+.news {
+  margin-top: 24px;
+}
+
+.news__info {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.news__time {
+  font-size: 12px;
+  color: #666;
+}
+
+.news__category {
+  font-size: 10px;
+  /* background: #eee; */
+  padding: 2px 8px;
+  border-radius: 4px;
+  color: #fff;
+  background: #333;
+}
+
+.news__category--news {
+  background: blue;
+}
+
+.news__category--media {
+  background: green;
+}
+
+.news__category--event {
+  background: orange;
+}
+
+.news__title {
+  font-size: 16px;
+}
+
+.news__content {
+  font-size: 14px;
+  line-height: 1.8;
+}
+
+.footer {
+  margin-top: 48px;
+  /* text-align: center; */
 }
