--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 :root {
-  -text-color-normal: #333;
+  --text-color-normal: #333;
 
   --normal-btn-text-color: ;
   --normal-btn-background-color: ;
@@ -24,6 +24,8 @@
   --media-background-color: rgba(16, 149, 226, 0.1);
   --event-text-color: rgba(226, 149, 16, 1);
   --event-background-color: rgba(226, 149, 16, 0.1);
+
+  --content-width: 800px;
 }
 
 * {
@@ -33,7 +35,7 @@
 body {
   margin: 0;
   /* background: #f8f8f8; */
-  color: #333;
+  color: var(--text-color-normal);
 }
 
 p {
@@ -42,8 +44,9 @@ p {
 
 .wrapper {
   margin: 32px auto;
-  max-width: 800px;
+  max-width: var(--content-width);
   width: calc(100% - 32px);
+  /* min-height: 80vh; */
 }
 
 
@@ -57,7 +60,7 @@ p {
 
 .header__inner {
   padding: 8px 0;
-  max-width: 800px;
+  max-width: var(--content-width);
   width: calc(100% - 32px);
   margin: 0 auto;
   display: flex;
@@ -273,6 +276,9 @@ p {
   font-size: 16px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   padding: 4px;
+  color: var(--text-color-normal);
+  border: 1px solid #ccc;
+  border-radius: 2px;
 }
 
 .create-news__input {
@@ -305,4 +311,33 @@ p {
 
 .footer {
   margin-top: 48px;
+}
+
+.footer {
+  /* border-bottom: 1px solid #ccc; */
+  background: #f8f8f8;
+  text-align: center;
+  padding: 8px 0;
+}
+
+.copyright {}
+
+.copyright__inner {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  justify-content: center;
+  gap: 4px;
+}
+
+.copyright__copy {
+  font-size: 16px;
+}
+
+.for-show {
+  padding: 16px;
+  border: 1px solid #eee;
+  background: #f8f8f8;
+  border-radius: 4px;
+  font-size: 12px;
 }
